# means_of_production

./: LICENSE  README.md  pyproject.toml
domain/entities/: __init__.py  base_borrower.py  borrower.py  entity.py  thing.py
domain/entities/lenders/: __init__.py  individual_distributed_lender.py  lender.py
domain/entities/libraries/: __init__.py  library.py  library_fee.py
domain/entities/loans/: __init__.py  loan.py
domain/entities/people/: __init__.py  borrower.py  person.py  person_borrower.py
domain/entities/waiting_lists/: __init__.py  reservation.py  waiting_list.py
domain/repositories/: base_in_memory_repository.py  thing_repository.py
domain/value_items/: __init__.py  borrower_verification_flags.py  due_date.py  exceptions.py  id.py  loan_status.py  money.py  person_name.py  reservation_status.py  thing_status.py  thing_title.py  url.py
domain/value_items/location/: __init__.py  distance.py  location.py  physical_area.py  physical_location.py  virtual_location.py
