[project]
name = "means_of_production"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matty Roses", email = "admin@meansofp.org"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "ruff>=0.8.4",
]
[tool.pdm]
distribution = false
