[project]
name = "means_of_production"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matty Roses", email = "admin@meansofp.org"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "ruff>=0.8.4",
    "pydantic>=2.10.4",
    "pyright>=1.1.391",
]
[tool.pdm]
distribution = false


[tool.ruff.lint.per-file-ignores]
# ignore type annotation errors in test files
"**/tests/**/*.py" = ["ANN"]
"conftest.py" = ["ANN"]
"__init__.py" = ["F401"]